set default outline-offset for links positive to avoid outline overlap with characters

--- a/app/assets/stylesheets/datasets.scss
+++ b/app/assets/stylesheets/datasets.scss
@@ -408,6 +408,11 @@ legend.metadata-border {
   overflow-x: scroll;
 }
 
+a {
+  &:focus {
+    outline-offset: 1px;
+  }
+}
 .dataset-link{
   // add outline when focused for accessibility
   &:focus {
